...
        PTElevatedButton(
          caption: user == null ? 'Sign In  with Firebase' : 'View Profile',
          onPressed: () => user == null ? Navigator.push(context, quizSignInRoute) : Navigator.push(context, quizProfileRoute),
        ),
        const _TextSeparator(),
        PTElevatedButton(
          caption: 'Go to the quiz',
          onPressed: () => Navigator.push(context, quizWelcomeRoute),
        ),
        const _TextSeparator(),
        PTElevatedButton(
          caption: 'Send notification',
          onPressed: _showNotification,
...
