...
            colorsToDisplay: _colorsToDisplay,
            onSelected: _onColorSelected,
            errorText: _showErrors && !_colorsValid ? 'Colors must be picked' : null,
          ),
          const SizedBox(height: 24),
          PTElevatedButton(
            caption: 'Ready!',
            onPressed: _onSubmit,
          ),
        ],
      ).horizontallyPadded24,
    );
  }
...
